<resources>
    <string name="app_name">Bazaar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="click">Click here</string>
    <string name="newtobazar">New to Bazaar?</string>
    <string name="name">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="account">Already have an account?</string>
    <string name="email">name@email.com</string>
    <string name="phone">+40799999999</string>
    <string name="forgottext">We will send you an email with instructions on how to reset your password.</string>
    <string name="emailme">Email me</string>
    <string name="order">Order now</string>
    <string name="timeline">Timeline</string>
    <string name="my_market">My Market</string>
    <string name="my_fares">My fares</string>
    <string name="Search">fdd</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="fullname">Full name</string>
    <string name="publish">Publish</string>
    <string name="message">Send a chat message</string>
    <string name="phonenum">Phone number</string>
    <string name="myorder">My Order</string>
    <string name="amount">Amount</string>
    <string name="comment">Comments</string>
    <string name="revolut">Place your order and track it\'s avalability before you send Revolut payment!</string>
    <string name="cancel">Cancel</string>
    <string name="sendorder">Send my order</string>
    <string name="ordercompleted">Order completed</string>
    <string name="completedorder">Please track your order under <font color='#01C6DB'>Ongoing Orders</font>. Thank you!</string>
    <string name="close">Close</string>
    <string name="add_product_details">Give us details about your fare</string>
    <string name="title">Title</string>
    <string name="price_amount">Price/amount</string>
    <string name="available_amount">Available amount</string>
    <string name="short_description">Short description</string>
    <string name="contact_details">Contact details</string>
    <string name="previewmyfair">Preview my fair</string>
    <string name="launchmyfair">Launch my fair</string>
    <string name="totalitems">Total items</string>
    <string name="priceitem">Price/item</string>
    <string name="selleditem">Selled Items</string>
    <string name="revenew">Revenew</string>
    <string name="ongoingorders">Ongoing Orders</string>
    <string name="ongoingsales">Ongoing Sales</string>
    <string-array name="price_amount">
        <item>RON</item>
        <item>EUR</item>
        <item>CHF</item>
        <item>USD</item>
    </string-array>
    <string-array name="available_amount">
        <item>Kg</item>
        <item>L</item>
        <item>Db</item>
        <item>Cal</item>
    </string-array>
</resources>